updated style sheets

--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,7 @@ h5{
     line-height: 150%;
 }
 .navbar-style{
-    font-family: 'Open Sans', sans-serif; 
+    font-family: 'Fjalla One', sans-serif; 
     font-size: 17px;
 }
 .carousel,
